# demo-ai

./: .env.example  .gitignore  Demo.md  Dockerfile  Dockerfile.deps  HEALTHCHECK_README.md  IMAGE_VALIDATION_README.md  README.md  build.sh  docker-compose.yml  local_health_check.sh  monitor.sh  pyproject.toml  start.sh  stop.sh  test_image_validation.py
src/ai_animation/: __init__.py
src/ai_animation/api/: __init__.py  models.py  routes.py
src/ai_animation/config/: __init__.py  api.py  app.py  base.py  db.py  error.py  redis.py  task.py
src/ai_animation/core/: __init__.py  tasks.py
src/ai_animation/storage/: storage.py
src/ai_animation/utils/: __init__.py  image_validator.py
src/demo_ai/: celery_app.py
src/test/: celery_app.py  main.py
src/test/static/: ai_demo.js
src/test/templates/: index.html
